# number-plate-recognition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: CMakeLists.txt  _TZ_15351-mkolny-ThinkPad-L512.dvi  _TZ_15351-mkolny-ThinkPad-L512.tex  chapter_basics.tex  chapter_introduction.tex  chapter_methods.tex  chapter_ocr.tex  chapter_plates.tex  chapter_researches.tex  chapter_results.tex  chapter_summary.tex  main-flowchart.dia  main_document.bib  main_document.tex  sierotki.sh
doc/img/: ssn-example.dia
doc/presentations/: final-presentation.odp  prezentacja-seminarium-1.odp  prezentacja-seminarium-2.odp
src/: AlgorithmManager.cpp  AlgorithmManager.h  CMakeLists.txt  IAlgorithm.h  MainWindow.cpp  MainWindow.h  main.cpp  sigc++lambda-hack.h
src/algorithms/: CMakeLists.txt  EndpointAlgorithm.cpp  EndpointAlgorithm.h  IAlgorithm.h  utils.cpp  utils.h
src/algorithms/counting_lines/: CLRzutJasnosci.cpp  CLRzutJasnosci.h
src/algorithms/dummy_algorithm/: CMakeLists.txt  DummyAlgorithm.cpp  DummyAlgorithm.h
src/algorithms/endpoints/: Canny.cpp  Canny.h  RzutJasnosciRegionGrowing.cpp  RzutJasnosciRegionGrowing.h  SauvolPietikainen.cpp  SauvolPietikainen.h  SzczytyHistogramu.cpp  SzczytyHistogramu.h  SzczytySrednia.h
src/algorithms/rzut_jasnosci/: RzutJasnosci.cpp  RzutJasnosci.h
src/algorithms/szczyty_histogramu/: SzczytyHistogramu.cpp  SzczytyHistogramu.h  SzczytyMinimum.h
src/test/: CMakeLists.txt  main_test.cpp
src/tuner/: AlgorithmManager.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  TimeMeasure.h  main.cpp
test/: main_test.cpp
(+2 files in other folders)
